# ComfyQR-scanning-nodes

./: README.md  __init__.py  pyproject.toml  qr_validation.py  requirements.txt
.github/workflows/: publish.yml
examples/: padded_example.json
