[project]
name = "comfyqr-scanning-nodes"
description = "A set of ComfyUI nodes to quickly test generated QR codes for scannability. A companion project to ComfyQR."
version = "0.1.0"
license = { file = "LICENSE" }
dependencies = ["pyzbar"]

[project.urls]
Repository = "https://github.com/coreyryanhanson/ComfyQR-scanning-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "coreyryanhanson"
DisplayName = "ComfyQR-scanning-nodes"
Icon = ""